# ros_to_ros2_talk_examples

./: README.md
actions_ros2/: CMakeLists.txt  package.xml
actions_ros2/src/: client_node.cpp  server_node.cpp
example_test/: CMakeLists.txt  package.xml
example_test/include/example_test/: ExampleSubscriber.hpp
example_test/src/: example_test_executable.cpp
example_test/src/example_test/: ExampleSubscriber.cpp
example_test/test/: CMakeLists.txt  example_subscriber_test.cpp
intro_cpp_ros2/: CMakeLists.txt  package.xml
intro_cpp_ros2/launch/: composable_pub_timer_launch.py
intro_py_ros2/: package.xml  setup.cfg  setup.py
intro_py_ros2/intro_py_ros2/: composable_node.py  composable_node_pub.py  composable_node_pub_timer.py  composable_node_sub.py  simple_node.py  simple_node_pub.py  simple_node_pub_qos.py  simple_node_sub.py  simple_node_sub_qos.py
intro_ros2/: package.xml
intro_ros2/src/: composable_node_pub_timer.cpp  simple_node.cpp  simple_node_pub.cpp
launchers_ros2/: CMakeLists.txt  package.xml
launchers_ros2/launch/: first_launch.py  second_bis_launch.py  second_launch.py
lifecycle_nodes_ros2/: CMakeLists.txt  package.xml
lifecycle_nodes_ros2/config/: config_2.yaml
lifecycle_nodes_ros2/src/: pub_lifecycle_node.cpp  simple_lifecycle_node.cpp
parameters_ros2/: CMakeLists.txt  package.xml
parameters_ros2/launch/: param_file_launch.py  params_launch.py
parameters_ros2/src/: file_param_node.cpp  reconf_param_node.cpp  simple_param_node.cpp
ros2talk_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2talk_msgs/action/: RepeatSentence.action
ros2talk_msgs/srv/: ReverseString.srv
services_ros2/: CMakeLists.txt  package.xml
services_ros2/src/: composable_server_node.cpp  iterative_client_node.cpp  server_node.cpp  simple_client_node.cpp
